--- a/src/component/ingredient/DetailProducts/detailProducts.module.scss
+++ b/src/component/ingredient/DetailProducts/detailProducts.module.scss
@@ -198,6 +198,10 @@
     text-transform: capitalize;
     flex-shrink: 0;
 }
+.icon-down{
+    margin-left: 5px;
+    cursor: pointer;
+}
 .address-to {
     display: flex;
     align-items: center;
