--- a/src/component/ingredient/DetailLazMall/DetailLazMall.module.scss
+++ b/src/component/ingredient/DetailLazMall/DetailLazMall.module.scss
@@ -67,21 +67,22 @@
     padding: 20px 0;
 }
 .category {
+    width: 240px;
     height: 100%;
 }
-.card{
+.card {
     width: 84%;
 }
 .card-items {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 .product-item {
     margin-bottom: 15px;
+    margin-left: 4.8px;
 }
 .card-item {
-    width: 193px;
+    width: 189px;
     min-height: 189px;
     height: 100%;
     background: #fff;
@@ -161,4 +162,55 @@
     text-align: left;
     font-size: 1.4rem;
     color: rgba(0, 0, 0, 0.65);
+}
+
+.cate-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    padding-bottom: 15px;
+    color: rgba(0, 0, 0, 0.8);
+    font-weight: 700;
+    font-size: 1.6rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+.icon-cate {
+    margin-right: 10px;
+    width: 1.3rem;
+    height: 1.3rem;
+}
+.cate-list {
+    position: relative;
+    padding-bottom: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+.name-cate {
+    padding: 8px;
+    color: #ee4d2d;
+    cursor: pointer;
+}
+.name-cate::before {
+    content: '';
+    position: absolute;
+    transform: translateY(104%);
+    left: 0;
+    border: 4px solid;
+    border-color: transparent transparent transparent #ee4d2d;
+}
+.cate-children {
+    padding: 8px;
+    font-size: 1.4rem;
+    cursor: pointer;
+}
+.location-filter {
+    margin-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+.check-box {
+    padding: 8px;
+    padding-left: 0;
+}
+.icon-down {
+    rotate: -90deg;
 }
