--- a/src/component/ingredient/DetailProducts/detailProducts.module.scss
+++ b/src/component/ingredient/DetailProducts/detailProducts.module.scss
@@ -1,4 +1,4 @@
-.content{
+.content {
     margin: 0 164px;
     margin-bottom: 20px;
 }
@@ -181,7 +181,44 @@
     background-color: #d0011b;
     border-radius: 2px;
 }
-.transport-to {
+.dc-shopit {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.mini-voucher {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5px;
+    padding: 3px 7px;
+    background: rgba(208,1,27,.08);
+    color: #ee4d2d;
+    cursor: default;
+
+    &::before {
+        content: '';
+        position: absolute;
+        left: -3px;
+        width: 6px;
+        height: calc(100% - 5px);
+        background-image: radial-gradient(#fff 2px, transparent 0);
+        background-size: 6px 6px;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        right: -3px;
+        width: 6px;
+        height: calc(100% - 5px);
+        background-image: radial-gradient(#fff 2px, transparent 0);
+        background-size: 6px 6px;
+    }
+}
+.transport-to,
+.discount-shop {
     display: flex;
     margin-top: 16px;
 }
@@ -202,7 +239,7 @@
     text-transform: capitalize;
     flex-shrink: 0;
 }
-.icon-down{
+.icon-down {
     margin-left: 5px;
     cursor: pointer;
 }
@@ -225,6 +262,7 @@
 .btn-classify {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 10px;
 }
 .product-variation {
     margin: 0 8px 8px 0 !important;
@@ -404,7 +442,14 @@
     font-size: 1.4rem;
     color: #d0011b;
 }
-.txt-shop{
+.txt-shop {
     margin-left: 6px;
     font-size: 1.4rem;
+}
+.text-tl {
+    padding: 10px 20px;
+    width: 250px;
+    background-color: #fff;
+    border: 1px solid #c4c3c373 !important;
+    border-radius: 5px !important;
 }
