--- a/src/component/layout/header/header.module.scss
+++ b/src/component/layout/header/header.module.scss
@@ -20,8 +20,7 @@
 .register,
 .select,
 .care,
-.check,
-.account {
+.check {
     color: #9e9e9e !important;
     cursor: pointer;
     font-weight: bold;
@@ -72,6 +71,11 @@
 }
 
 // spare
+.spare{
+    &:hover .show-clickSpare{
+        display: block;
+    }
+}
 .show-clickSpare {
     display: none;
     position: absolute;
@@ -83,6 +87,14 @@
     border: 1px solid #bfbfbf;
     border-radius: 10px;
     background-color: #fff;
+
+    &::after{
+        content: '';
+        position: absolute;
+        top: -25px;
+        width: 360px;
+        height: 25px;
+    }
 }
 .show-clickSpare::before {
     content: '';
@@ -139,6 +151,11 @@
 }
 
 // care
+.care{
+    &:hover .show-care{
+        display: block;
+    }
+}
 .show-care {
     display: none;
     position: absolute;
@@ -150,6 +167,15 @@
     border: 1px solid #bfbfbf;
     border-radius: 10px;
     background-color: #fff;
+    z-index: 10;
+
+    &::after{
+        content: '';
+        position: absolute;
+        top: -25px;
+        width: 200px;
+        height: 25px;
+    }
 }
 .show-care::before {
     content: '';
@@ -191,10 +217,20 @@
     z-index: 10;
 }
 
-.account{
+.account {
     position: relative;
+    color: #9e9e9e !important;
+    cursor: pointer;
+    font-weight: bold;
+    &:hover .name-acc {
+        color: #f36d00 !important;
+    }
+    &:hover .navigation-acc {
+        display: block;
+    }
 }
-.navigation-acc{
+.navigation-acc {
+    display: none;
     position: absolute;
     top: 30px;
     padding: 20px 15px;
@@ -203,13 +239,25 @@
     border: 1px solid #e0dcdc6a;
     border-radius: 10px;
 
-    &:hover{
-        color: #9e9e9e !important;
+    &::before {
+        content: '';
+        display: inline-block;
+        position: absolute;
+        top: -15px;
+        right: -2px;
+        width: 200px;
+        height: 20px;
     }
 }
-.account-user{
+.txt {
+    color: #9e9e9e !important;
+    &:hover {
+        color: #f36d00 !important;
+    }
+}
+.account-user {
     margin-bottom: 13px;
 }
-.log-out{
+.log-out {
     margin-top: 13px;
 }
